<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    tools:context=".BioChapterFragment">

    <!--    all items-->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="7"
        android:columnCount="1">

        <!--biology 2023 chap 1 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_bengali_book"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="30dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_chap_1_part1"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/kalpurush"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_chap_1_part2"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/kalpurush"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_chap_1_part3"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:fontFamily="@font/kalpurush"
                        android:textSize="20sp"
                        />

                </LinearLayout>

                <Button
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:id="@+id/bioChap1Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="PDF"
                    app:icon="@drawable/ic_cloud_download"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--biology 2023 chap 2 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/join_whatsapp_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_bengali_book"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="30dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_chap_2_part1"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/kalpurush"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_chap_2_part2"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:fontFamily="@font/kalpurush"
                        android:textSize="20sp"
                        />

                </LinearLayout>


                <Button
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:id="@+id/bioChap2Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="PDF"
                    app:icon="@drawable/ic_cloud_download"
                    />



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--biology 2023 chap 3 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_bengali_book"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="20dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_chap_3_part1"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/kalpurush"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_chap_3_part2"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/kalpurush"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_chap_3_part3"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:fontFamily="@font/kalpurush"
                        android:textSize="20sp"
                        />

                </LinearLayout>

                <Button
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:id="@+id/bioChap3Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="PDF"
                    app:icon="@drawable/ic_cloud_download"
                    />



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--biology 2023 chap 4 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_bengali_book"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="20dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_chap_4_part1"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/kalpurush"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_chap_4_part2"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:fontFamily="@font/kalpurush"
                        android:textSize="20sp"
                        />

                </LinearLayout>

                <Button
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:id="@+id/bioChap4Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="PDF"
                    app:icon="@drawable/ic_cloud_download"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--biology 2023 chap 5-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_bengali_book"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="20dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_chap_5_part1"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/kalpurush"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_chap_5_part2"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/kalpurush"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio_chap_5_part3"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:fontFamily="@font/kalpurush"
                        android:textSize="20sp"
                        />

                </LinearLayout>

                <Button
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:id="@+id/bioChap5Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="PDF"
                    app:icon="@drawable/ic_cloud_download"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</ScrollView>